K8s-Task/roles/deploy-juice-shop-app/files/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  namespace: juice-shop
  labels:
    run: juice-shop
spec:
  ingressClassName: nginx
  rules:
  - host: juice-shop.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-shop
            port:
              number: 80
